<?xml version="1.0"?>
<package format="3">
  <name>scan_to_pcl_ros</name>
  <version>0.0.0</version>
  <description>The scan_to_pcl_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ToshikiNakamura0412/scan_to_pcl_ros.git</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
