<?xml version="1.0"?>
<package format="2">
  <name>scan_to_pcl_ros</name>
  <version>0.0.0</version>
  <description>The scan_to_pcl_ros package</description>

  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ToshikiNakamura0412/scan_to_pcl_ros.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
